Fixing issues with extra images gallery container spacing

--- a/styles/pages/DetailsMobile.module.scss
+++ b/styles/pages/DetailsMobile.module.scss
@@ -53,6 +53,7 @@
                 height: 100% !important;
                 position: relative;
                 overflow: hidden;
+                margin-right: 5px;
 
                 .extra_images_gallery_image {
                     width: 100px !important;
